/*
 * Copyright 2022 CECTC, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package undolog;

import "table_records.proto";

option go_package=".;undolog";

message PbSqlUndoLog {
    int32 SqlType = 1;
    string SchemaName = 2;
    string TableName = 3;
    string LockKey = 4;
    PbTableRecords BeforeImage = 5;
    PbTableRecords AfterImage = 6;
}

message PbBranchUndoLog {
    string Xid = 1;
    int64 BranchID = 2;
    repeated PbSqlUndoLog SqlUndoLogs = 3;
}